// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alerts Selectors should get formatEditValues 1`] = `
Object {
  "alert_metric": "signals_health_threshold",
  "alert_subaccount": 123,
  "assignTo": "subaccount",
  "email_addresses": Array [
    "test@test1.com",
    "test@test2.com",
  ],
  "enabled": true,
  "facet_name": "sending_domain",
  "facet_value": "foo.com",
  "id": 123,
  "name": "alert-123",
  "subaccount": Object {
    "id": 123,
  },
  "threshold": 34,
}
`;

exports[`Alerts Selectors should handle empty formatEditValues 1`] = `
Object {
  "alert_metric": undefined,
  "alert_subaccount": undefined,
  "assignTo": "subaccount",
  "email_addresses": undefined,
  "enabled": undefined,
  "facet_name": "ALL",
  "facet_value": undefined,
  "id": undefined,
  "name": undefined,
  "subaccount": undefined,
  "threshold": undefined,
}
`;

exports[`Alerts Selectors should use selectDomainsBySubaccount to get domains 1`] = `
Array [
  Object {
    "domain": "dom1.com",
  },
  Object {
    "domain": "dom2.com",
  },
]
`;

exports[`Alerts Selectors should use selectDomainsBySubaccount to get domains 2`] = `
Array [
  Object {
    "domain": "dom1.com",
  },
  Object {
    "domain": "dom2.com",
  },
]
`;

exports[`Alerts Selectors should use selectDomainsBySubaccount to get domains 3`] = `
Array [
  Object {
    "domain": "dom1.com",
  },
  Object {
    "domain": "dom2.com",
  },
]
`;

exports[`Alerts Selectors should use selectIpPoolsBySubaccount to get ip pools 1`] = `
Array [
  Object {
    "id": "foo",
  },
  Object {
    "id": "bar",
  },
]
`;
